remove houzz, reinclude videos, fix z-index issue with notification bar

--- a/wp-content/themes/clearlight-sage/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/clearlight-sage/resources/assets/styles/layouts/_header.scss
@@ -185,3 +185,8 @@ nav {
     }
   }
 }
+
+
+#wpfront-notification-bar.wpfront-fixed {
+  z-index: 100;
+}
